addons/kyverno/policies/edtech-ca_sopipa_no_targeted_advertising-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-ca_sopipa_no_targeted_advertising
  annotations:
    rulehub.id: edtech.ca_sopipa_no_targeted_advertising
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "edtech.ca_sopipa_no_targeted_advertising: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
